# cbi_toolbox

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CMakeLists.txt  LICENSE.rst  README.md  README.rst  environment.yml  pyproject.toml  setup.py
.github/workflows/: python-release.yml  python-testing.yml
cbi_toolbox/: __init__.py  arrays.py  distributed.py  files.py  filter_sinogram.py  images.py  parallel.py  plotting.py
cbi_toolbox/bsplines/: __init__.py  _change_basis.py  _interpolation_conversion.py  bspline.py  change_basis.py  change_basis_columns.py  convert_to_interpolation_coefficients.py  convert_to_samples.py  interpolation_conversion.py
cbi_toolbox/parallel/: __init__.py  mpi.py
cbi_toolbox/reconstruct/: __init__.py  deconv.py  fpsopt.py  preprocess.py  vhf.py
cbi_toolbox/simu/: __init__.py  dynamic.py  imaging.py  optics.py  primitives.py  spim_illumination.py  texture.py  textures.py
cbi_toolbox/splineradon/: __init__.py  _filter_sinogram.py  _spline_kernel.py  change_basis.py  change_basis_columns.py  convert_to_interpolation_coefficients.py  convert_to_samples.py  filter_sinogram.py  spline_kernels.py  steps.py
cbi_toolbox/splineradon/src/: accsplineradon.cpp  cradon.cpp  cradon.h  csplineradon.cpp  cudaradon.cpp  cudaradon.cu  cudaradon.h  ompradon.cpp  ompsplineradon.cpp  splineradon.cpp  splineradon.h  tomography.cpp  tomography.h  tomography_cuda.cu  tomography_cuda.h  tomography_omp.cpp  tomography_omp.h
cbi_toolbox/tests/: __init__.py  test_bsplines.py  test_deconv.py  test_distributed.py  test_mpi.py  test_splradon.py
cbi_toolbox/utils/: __init__.py  _arrays.py  ome.py  plotting.py
conda.recipe/: meta.yaml
doc/: Makefile  about.rst  conf.py  experiments.rst  index.rst  install.rst  licensing.rst
doc/_templates/: package.rst_t
docs/: Makefile  about.rst  conf.py  experiments.rst  index.rst  install.rst
examples/: demo.py  heartbeat.py  imaging.py  measure_cuda.py  splineradon.py
experiments/: README.rst
experiments/OMMTC_2024/: README.rst  requirements.txt  run_simus.sh
experiments/OMMTC_2024/src/: configure.py  gather_results.py  gen_samples.py  reconstruct.py  simu_imaging.py  tools.py
experiments/OMMT_2023/: .gitignore  README.rst  requirements.txt  run_exp.sh  run_simus.sh  run_timing.sh
experiments/OMMT_2023/src/: configure.py  configure_exp.py  configure_timing.py  gather_results.py  gather_results_lsurface.py  gen_samples.py  reconstruct.py  simu_imaging.py  timing.py
experiments/OVC_2021/: README.rst  run_fpsopt.sh  run_fssopt.sh  run_results.sh  setup.sh
experiments/OVC_2021/scripts/: combined_graph.py  fps_noise.py  fss_noise.py  gen_deconv.py  gen_fpsopt.py  gen_fssopt.py  gen_phantom.py  gen_radon.py  gen_recons.py  gen_results.py  gen_spim.py  noise_images.py  noise_results.py  radon_noise.py  recons_deconv.py
experiments/PAAQ_2023/: .gitignore  README.rst  requirements.txt  run_experiments.sh  run_simus.sh  run_validation.sh
experiments/PAAQ_2023/src/algorithms/: mcvhf_sort.py  mutual_sort.py
experiments/PAAQ_2023/src/experimental/: configure_exp.py  crop_data.py  generate_video.py
experiments/PAAQ_2023/src/simulations/: configure_mutual.py  configure_ref.py  configure_simu.py  convert_tiff.py  gather_results.py  run_mutual.py  run_ref.py  run_simu.py
scripts/: cmd.sh
scripts/splineradon/: distributed_iradon.py  grid_iradon.sh  iradon_preprocess.py  process_sinogram.py
tests/: test_bsplines.py  test_deconv.py  test_distributed.py  test_splradon.py
